syntax = "proto3";

import "crontab/crontab.proto";
import "google/protobuf/empty.proto";

option go_package = "github.com/jdxj/sign/internal/proto/secret";

service SecretService {
  rpc CreateSecret(CreateSecretReq) returns(CreateSecretRsp);
  rpc GetSecretList(GetSecretListReq) returns(GetSecretListRsp);
  rpc UpdateSecret(UpdateSecretReq) returns(google.protobuf.Empty);
  rpc DeleteSecret(DeleteSecretReq) returns(google.protobuf.Empty);
}

message CreateSecretReq {
  int64 UserID = 1;
  string Describe = 2;
  Domain Domain = 3;
  string Key = 4;
}

message CreateSecretRsp {
  int64 SecretID = 1;
}

message GetSecretListReq {
  repeated int64 SecretIDs = 1;
  repeated Domain Domains = 2;
  int64 UserID = 3;
}

message SecretRecord {
  int64 SecretID = 1;
  string Describe = 2;
  Domain Domain = 3;
  string Key = 4;
}

message GetSecretListRsp {
  repeated SecretRecord List = 1;
}

message UpdateSecretReq {
  int64 SecretID = 1;
  int64 UserID = 2;
  string Describe = 3;
  Domain Domain = 4;
  string Key = 5;
}

message DeleteSecretReq {
  int64 SecretID = 1;
  int64 UserID = 2;
}
